...
      }}
    >
      <Tab.Screen
        name="Workout"
        component={WorkoutStackScreen}
        options={{
          tabBarButtonTestID: "tab-workout",
          tabBarIcon: ({ focused, size }) => (
            <Icon icon={Dumbbell} size={size} color={tabIconColor(focused)} />
          ),
        }}
      />
      <Tab.Screen
        name="History"
        component={HistoryStackScreen}
        options={{
          tabBarButtonTestID: "tab-history",
          tabBarIcon: ({ focused, size }) => (
            <Icon icon={History} size={size} color={tabIconColor(focused)} />
          ),
        }}
      />
    </Tab.Navigator>
...
